including main event example page

--- a/src/events/BSides Example/2024/index.mdx
+++ b/src/events/BSides Example/2024/index.mdx
@@ -2,6 +2,9 @@
 eventName: "BSides Example"
 eventYear: 2024
 eventDate: 2024-12-31
+eventAliases:
+   - BSides Example
+   - BSidesExample
 ---
 
 {/* you can import libraries whenever you need, or at the head (per JSX standard) */}
