Fixing contrib pages and bsidessf event

--- a/src/events/BSidesSF/2024/index.mdx
+++ b/src/events/BSidesSF/2024/index.mdx
@@ -38,4 +38,4 @@ If you drive,there is 24/7 short and long term parking at the 5th and Mission ga
 
 ### More info
 
-Please see our (website)[https://bsidessf.org] for more information.
+Please see our [website](https://bsidessf.org) for more information.
